fix : overflow product list

--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,23 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@layer utilities {
+  .scroll::-webkit-scrollbar {
+      width: 5px;
+    }
+  
+    .scroll::-webkit-scrollbar:hover {
+      opacity: 1;
+    }
+  
+    .scroll::-webkit-scrollbar-track {
+      background: transparent;
+    }
+  
+    .scroll::-webkit-scrollbar-thumb {
+      background-color: #808080ad;
+      border-radius: 20px;
+      border: none;
+    }
+}
